--- a/Yummie/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Yummie/Views/Storyboards/Base.lproj/Main.storyboard
@@ -134,11 +134,11 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jDZ-c2-qES">
                                 <rect key="frame" x="0.0" y="88" width="428" height="838"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="mLb-Zg-ivv">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="686"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="mLb-Zg-ivv">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="734"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjd-IJ-XPz">
-                                                <rect key="frame" x="0.0" y="0.0" width="428" height="170"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="428" height="178"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMe-eV-BQs">
                                                         <rect key="frame" x="16" y="16" width="396" height="24"/>
@@ -150,7 +150,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4sx-cP-7Q5">
-                                                        <rect key="frame" x="0.0" y="48" width="428" height="122"/>
+                                                        <rect key="frame" x="0.0" y="56" width="428" height="122"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="122" id="nOb-T1-zv0"/>
@@ -169,14 +169,14 @@
                                                     <constraint firstAttribute="bottom" secondItem="4sx-cP-7Q5" secondAttribute="bottom" id="G7j-OV-6lq"/>
                                                     <constraint firstItem="4sx-cP-7Q5" firstAttribute="leading" secondItem="kjd-IJ-XPz" secondAttribute="leading" id="KbB-xS-25G"/>
                                                     <constraint firstAttribute="trailing" secondItem="4sx-cP-7Q5" secondAttribute="trailing" id="NjP-Lo-ypQ"/>
-                                                    <constraint firstItem="4sx-cP-7Q5" firstAttribute="top" secondItem="HMe-eV-BQs" secondAttribute="bottom" constant="8" id="TVo-qn-Z0f"/>
+                                                    <constraint firstItem="4sx-cP-7Q5" firstAttribute="top" secondItem="HMe-eV-BQs" secondAttribute="bottom" constant="16" id="TVo-qn-Z0f"/>
                                                     <constraint firstAttribute="trailing" secondItem="HMe-eV-BQs" secondAttribute="trailing" constant="16" id="YL2-Ac-rA2"/>
                                                     <constraint firstItem="HMe-eV-BQs" firstAttribute="top" secondItem="kjd-IJ-XPz" secondAttribute="top" constant="16" id="i9L-s4-2Pv"/>
                                                     <constraint firstItem="HMe-eV-BQs" firstAttribute="leading" secondItem="kjd-IJ-XPz" secondAttribute="leading" constant="16" id="jbx-qT-ect"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CL8-cx-Yh7">
-                                                <rect key="frame" x="0.0" y="170" width="428" height="348"/>
+                                                <rect key="frame" x="0.0" y="194" width="428" height="356"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Popular Dishes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQZ-DM-Ytw">
                                                         <rect key="frame" x="16" y="16" width="396" height="24"/>
@@ -187,24 +187,24 @@
                                                         <color key="textColor" red="0.86063534019999999" green="0.240141362" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BaX-hY-wCW">
-                                                        <rect key="frame" x="0.0" y="48" width="428" height="300"/>
+                                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BaX-hY-wCW">
+                                                        <rect key="frame" x="0.0" y="56" width="428" height="300"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="300" id="vHN-cc-wKA"/>
                                                         </constraints>
-                                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TPR-fR-ZVu">
+                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="TPR-fR-ZVu">
                                                             <size key="itemSize" width="128" height="128"/>
                                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="40" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells/>
                                                     </collectionView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstItem="BaX-hY-wCW" firstAttribute="top" secondItem="wQZ-DM-Ytw" secondAttribute="bottom" constant="8" id="2uO-ss-1sc"/>
+                                                    <constraint firstItem="BaX-hY-wCW" firstAttribute="top" secondItem="wQZ-DM-Ytw" secondAttribute="bottom" constant="16" id="2uO-ss-1sc"/>
                                                     <constraint firstAttribute="bottom" secondItem="BaX-hY-wCW" secondAttribute="bottom" id="D1j-Bt-TcL"/>
                                                     <constraint firstItem="wQZ-DM-Ytw" firstAttribute="top" secondItem="CL8-cx-Yh7" secondAttribute="top" constant="16" id="HPc-zb-Gv4"/>
                                                     <constraint firstAttribute="trailing" secondItem="BaX-hY-wCW" secondAttribute="trailing" id="MSV-Bt-q1C"/>
@@ -214,7 +214,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w8d-Wk-ik6">
-                                                <rect key="frame" x="0.0" y="518" width="428" height="168"/>
+                                                <rect key="frame" x="0.0" y="566" width="428" height="168"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chef's Specials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2OV-UL-H4D">
                                                         <rect key="frame" x="16" y="16" width="396" height="24"/>
@@ -281,6 +281,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="categoryCollectionView" destination="4sx-cP-7Q5" id="ppi-3V-YUk"/>
+                        <outlet property="dishesCollectionView" destination="BaX-hY-wCW" id="sia-hu-BII"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DPz-jm-Wtm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
