--- a/Yummie/Views/CollectionViewCells/Home/PopularDishes/DishesCollectionViewCell.xib
+++ b/Yummie/Views/CollectionViewCells/Home/PopularDishes/DishesCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DishesCollectionViewCell" customModule="Yummie" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DishesCollectionViewCell" id="gTV-IL-0wX" customClass="DishesCollectionViewCell" customModule="Yummie" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
