--- a/Yummie/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Yummie/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gNX-hf-UYG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ctG-3s-P01">
-                                <rect key="frame" x="0.0" y="44" width="428" height="714.66666666666663"/>
+                                <rect key="frame" x="0.0" y="44" width="428" height="738.66666666666663"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="sQn-R2-cqM">
                                     <size key="itemSize" width="428" height="708"/>
@@ -29,17 +29,17 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingCollectionViewCell" id="Fkh-hV-Pqh" customClass="OnboardingCollectionViewCell" customModule="Yummie" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="3.3333333333333335" width="428" height="708"/>
+                                        <rect key="frame" x="0.0" y="15.333333333333334" width="428" height="708"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="AkW-BD-IPW">
                                             <rect key="frame" x="0.0" y="0.0" width="428" height="708"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Gs-ZZ-sGt">
-                                                    <rect key="frame" x="0.0" y="0.0" width="428" height="561.33333333333337"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="428" height="569.33333333333337"/>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ugs-Mg-OfS">
-                                                    <rect key="frame" x="16" y="561.33333333333337" width="396" height="130.66666666666663"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ugs-Mg-OfS">
+                                                    <rect key="frame" x="16" y="569.33333333333337" width="396" height="122.66666666666663"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quick Delivery At Your Doorstep" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="995-K6-cRA">
                                                             <rect key="frame" x="80.666666666666686" y="0.0" width="235" height="74"/>
@@ -48,7 +48,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home Delivery and Online Reservation System for Resturants and Cafes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HmJ-IV-6gd">
-                                                            <rect key="frame" x="7.3333333333333428" y="90" width="381.66666666666663" height="40.666666666666657"/>
+                                                            <rect key="frame" x="7.3333333333333428" y="82" width="381.66666666666663" height="40.666666666666657"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" systemColor="systemGrayColor"/>
                                                             <nil key="highlightedColor"/>
@@ -76,7 +76,7 @@
                                 </cells>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-Gc-dAc">
-                                <rect key="frame" x="139" y="802" width="150" height="50"/>
+                                <rect key="frame" x="139" y="826" width="150" height="50"/>
                                 <color key="backgroundColor" name="buttonBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="rR9-7M-3YW"/>
@@ -95,7 +95,7 @@
                                 </connections>
                             </button>
                             <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n8G-1g-5cS">
-                                <rect key="frame" x="153.33333333333334" y="758.66666666666663" width="121.33333333333334" height="27.333333333333371"/>
+                                <rect key="frame" x="153.33333333333334" y="782.66666666666663" width="121.33333333333334" height="27.333333333333371"/>
                                 <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="currentPageIndicatorTintColor" red="0.86063534019999999" green="0.240141362" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </pageControl>
@@ -107,7 +107,7 @@
                             <constraint firstItem="ctG-3s-P01" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IxG-QH-CBM"/>
                             <constraint firstItem="b4u-Gc-dAc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="L9E-ut-437"/>
                             <constraint firstItem="ctG-3s-P01" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="PFU-BV-afc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b4u-Gc-dAc" secondAttribute="bottom" constant="40" id="PJJ-KU-Pbx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b4u-Gc-dAc" secondAttribute="bottom" constant="16" id="PJJ-KU-Pbx"/>
                             <constraint firstItem="b4u-Gc-dAc" firstAttribute="top" secondItem="n8G-1g-5cS" secondAttribute="bottom" constant="16" id="QQI-k8-cAQ"/>
                             <constraint firstItem="ctG-3s-P01" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gTV-yi-dG6"/>
                             <constraint firstItem="n8G-1g-5cS" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="lHk-Di-uOQ"/>
@@ -275,8 +275,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Yummie" id="sOG-v9-Vkx">
+                        <barButtonItem key="backBarButtonItem" title=" " id="ytH-tp-gaZ"/>
                         <barButtonItem key="rightBarButtonItem" image="cart.circle" catalog="system" id="Lw5-t2-5kZ">
                             <color key="tintColor" red="0.86063534019999999" green="0.240141362" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="6Xt-Ym-r4H" kind="show" id="mbF-G4-Hu3"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -419,6 +423,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ilU-m6-PZ7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3301.4018691588785" y="68.682505399568043"/>
+        </scene>
+        <!--Orders List Controller-->
+        <scene sceneID="zxF-0T-kpx">
+            <objects>
+                <viewController id="6Xt-Ym-r4H" customClass="OrdersListController" customModule="Yummie" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M7B-W3-efX">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9nR-Pb-TFu">
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="4YX-d0-CiI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9nR-Pb-TFu" firstAttribute="top" secondItem="4YX-d0-CiI" secondAttribute="top" id="0gf-z6-y3d"/>
+                            <constraint firstItem="4YX-d0-CiI" firstAttribute="bottom" secondItem="9nR-Pb-TFu" secondAttribute="bottom" id="EFO-Kc-r0c"/>
+                            <constraint firstItem="9nR-Pb-TFu" firstAttribute="leading" secondItem="4YX-d0-CiI" secondAttribute="leading" id="WvG-bG-XNC"/>
+                            <constraint firstItem="4YX-d0-CiI" firstAttribute="trailing" secondItem="9nR-Pb-TFu" secondAttribute="trailing" id="qWY-0g-9N7"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="CTv-Pt-8np"/>
+                    <connections>
+                        <outlet property="tableView" destination="9nR-Pb-TFu" id="29o-Rh-K9U"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xSs-GW-OPZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1745" y="802"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Kij-NU-Cq6">
